# rules_rust_no_refresh_bug

./: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  build-refresh-build.sh
src/: main.rs
